--- a/src/app/surveys/surveys.component.html
+++ b/src/app/surveys/surveys.component.html
@@ -1,9 +1,9 @@
 <div>
-	<button (click)="toggleNewSurvey()" >Nové hlasováni</button>
+	<button (click)="toggleNewSurvey()">Nové hl.</button>
 </div>
 
-<form *ngIf="newSurveyVisible" [formGroup]="formGroup"  (ngSubmit)="createSurvey()">
-	<app-survey-form formControlName="survey" ></app-survey-form>
+<form *ngIf="newSurveyVisible" [formGroup]="formGroup" (ngSubmit)="createSurvey()">
+	<app-survey-form formControlName="survey"></app-survey-form>
 
 	<input type="submit" name="new" value="Uložit" [disabled]="formGroup.invalid" />
 </form>
@@ -27,10 +27,12 @@
 			</td>
 			<td>{{survey.name}}</td>
 			<td>{{survey.description}}</td>
-			<td>{{survey.fromDate.year}}-{{survey.fromDate.month}}-{{survey.fromDate.day}} {{survey.fromTime.hour}}:{{survey.fromTime.minute}}:{{survey.fromTime.second}}</td>
-			<td>{{survey.untilDate.year}}-{{survey.untilDate.month}}-{{survey.untilDate.day}} {{survey.untilTime.hour}}:{{survey.untilTime.minute}}:{{survey.untilTime.second}}</td>
+			<td>{{survey.fromDate.year}}-{{survey.fromDate.month}}-{{survey.fromDate.day}}
+				{{survey.fromTime.hour}}:{{survey.fromTime.minute}}:{{survey.fromTime.second}}</td>
+			<td>{{survey.untilDate.year}}-{{survey.untilDate.month}}-{{survey.untilDate.day}}
+				{{survey.untilTime.hour}}:{{survey.untilTime.minute}}:{{survey.untilTime.second}}</td>
 			<td>
-				<button (click)="deleteSurvey(survey.id)" >Smazat</button>
+				<button (click)="deleteSurvey(survey.id)">Smazat</button>
 			</td>
 		</tr>
 	</table>
