--- a/src/app/option-form/option-form.component.html
+++ b/src/app/option-form/option-form.component.html
@@ -27,7 +27,7 @@
 						<button *ngIf="i < ximages.length - 1" type="button" (click)="shiftImage(i, 1)">Dolů</button>
 					</div>
 					<div>
-						<button type="button" (click)="deleteImage(i)">Smazat</button>
+						<button type="button" (click)="deleteImage(i)" title="Smazat obrázek">Smazat</button>
 					</div>
 				</div>
 			</div>
