--- a/src/app/overlay/overlay.component.html
+++ b/src/app/overlay/overlay.component.html
@@ -1,5 +1,5 @@
 <div class="overlay" *ngIf="imageUrl">
-	<div class="overlay-inside">
+	<div class="overlayInside autoScroll">
 		<img [src]="imageUrl | safe" />
 	</div>
 </div>
