--- a/src/app/survey/survey.component.html
+++ b/src/app/survey/survey.component.html
@@ -41,7 +41,7 @@
 
 		<div class="flexDiv">
 			<div class="rightmost">
-				<button (click)="deleteOption(xformGroup.value.option.id)">Smazat</button>
+				<button (click)="deleteOption(xformGroup.value.option.id)" title="Smazat volbu">Smazat</button>
 			</div>
 		</div>
 	</div>
